# AOCPP

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  read_input.hpp
src/2024/: Day1.hpp  Day1_2.hpp  Day2.hpp  Day3.hpp  Day4.hpp
src/utils/: delimitation.hpp
