cmake_minimum_required(VERSION 3.24.2)
project(AOCPP)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_INCLUDE_CURRENT_DIR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -static-libstdc++")

file(GLOB_RECURSE SOURCES src/*)

add_executable(AOCPP ${SOURCES})